[package]
name = "rlb"
version = "0.1.0"
authors = ["Alessio Placitelli <alessio.placitelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inherent = "0.1.4"
once_cell = "1.4.1"

[dependencies.glean-core]
path = ".."
version = "33.0.4"